<resources>
    <string name="app_name">Pickapp &amp; go</string>
    <string name="app_name_title">PickApp &amp; Go</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bm_home">Домой</string>
    <string name="bm_catalog">Каталог</string>
    <string name="bm_favorites">Избранное</string>
    <string name="bm_basket">Корзина</string>
    <string name="bm_profile">Профиль</string>
    <string name="menu_title_search">Поиск</string>
    <string name="customer_choice_text">Выбор покупателей</string>
    <string name="news_of_the_week_text">Новинки недели</string>
    <string name="goods_of_the_week_text">Товары недели</string>
    <string name="category_text">Категории</string>
    <string name="search_placeholder">Поиск</string>
</resources>
